--- a/css/style.css
+++ b/css/style.css
@@ -81,12 +81,12 @@ input[type="radio"].visually-hidden {
 
 .site-navigation-current:after {
 	content: "";
-    position: absolute;
-    display: block;
-    bottom: 24px;
-    left: 23px;
+	position: absolute;
+	display: block;
+	bottom: 24px;
+	left: 23px;
 	right: 23px;
-    border-bottom: 2px solid #fb565a;
+	border-bottom: 2px solid #fb565a;
 }
 
 .site-navigation a,
@@ -116,26 +116,24 @@ input[type="radio"].visually-hidden {
 }
 
 .basket::before {
-  content: "";
+	content: "";
 
-  position: absolute;
-  top: 33px;
-  left: 43px;
-  
-  width: 15px;
-  height: 15px;
-  
-  background-image: url("../img/cart-icon.svg");
-  background-repeat: no-repeat;
-  background-position: 0 0;
+	position: absolute;
+	top: 33px;
+	left: 43px;
+	
+	width: 15px;
+	height: 15px;
+
+	background-image: url("../img/cart-icon.svg");
+	background-repeat: no-repeat;
+	background-position: 0 0;
 }
 
 .container {
 	width: 1160px;
 	margin: 0 auto;
 	padding: 0 20px;
-	
-
 }
 
 .container h1 {
@@ -147,34 +145,39 @@ input[type="radio"].visually-hidden {
 	text-align: center;
 }
 
-.slider{
-    position:relative;
-    width:1160px;
-    height:414px;
-    margin:0 auto;
+.slider {
+	position:relative;
+	width:1160px;
+	height:414px;
+	margin:0 auto;
 	margin-bottom: 80px;
 }
-.slider input[type=radio] {
-    position:absolute;
-    opacity:0;
-}
-.slider-controls{
-    position:absolute;
-    bottom:105px;
-    left:50%;
-    width:200px;
-    height:10px;
-    margin-left:-100px;
-    text-align:center;
-    z-index:1000;
+
+.slider input {
+	font-family: inherit;
 }
 
-.slider-controls label{
-    display:inline-block;
-    margin:0 5.5px;
-    vertical-align:top;
-    border-radius:50%;
-    cursor:pointer;
+.slider input[type=radio] {
+	position:absolute;
+	opacity:0;
+}
+.slider-controls {
+	position:absolute;
+	bottom:105px;
+	left:50%;
+	width:200px;
+	height:10px;
+	margin-left:-100px;
+	text-align:center;
+	z-index:1000;
+}
+
+.slider-controls label {
+	display:inline-block;
+	margin:0 5.5px;
+	vertical-align:top;
+	border-radius:50%;
+	cursor:pointer;
 	background-image: url("../img/radio_out_slider.png");
 	width: 18px;
 	height: 18px;
@@ -182,48 +185,51 @@ input[type="radio"].visually-hidden {
 	background-position: 0 0;
 }
 
-
 #btn-1:checked ~ .slider-controls label[for="btn-1"],
 #btn-2:checked ~ .slider-controls label[for="btn-2"],
 #btn-3:checked ~ .slider-controls label[for="btn-3"] { 
-    background-image: url("../img/radio_in_slider.png");
+	background-image: url("../img/radio_in_slider.png");
 	width: 18px;
 	height: 18px;
 	background-repeat: no-repeat;
 	background-position: 0 0;
 }
-.slide{
-    position:absolute;
-    top:0;
-    left:0;
-    width:100%;
-    height:100%;
-    overflow:hidden;
+
+.slide {
+	position:absolute;
+	top:0;
+	left:0;
+	width:100%;
+	height:100%;
+	overflow:hidden;
 }
-.slide-text{
-    width:560px;
-    padding:60px 0;
-    color:#283136;
+
+.slide-text {
+	width:560px;
+	padding:60px 0;
+	color:#283136;
 }
-.slide-title{
-    font-size: 55px;
-    line-height: 55px;
-    font-weight: bold;
-    color: #000000;
+
+.slide-title {
+	font-size: 55px;
+	line-height: 55px;
+	font-weight: bold;
+	color: #000000;
 	padding-bottom: 10px;
 }
-.slide .btn{
-    display:block;
-    width:240px;
-    padding:14px 0;
-    margin-top:40px;
-    font-size:16px;
-    color:white;
-    text-transform:uppercase;
-    text-align:center;
-    text-decoration:none;
-    background:#fb565a;
-    border-radius:3px;
+
+.slide .btn {
+	display:block;
+	width:240px;
+	padding:14px 0;
+	margin-top:40px;
+	font-size:16px;
+	color:white;
+	text-transform:uppercase;
+	text-align:center;
+	text-decoration:none;
+	background:#fb565a;
+	border-radius:3px;
 }
 
 .btn:hover,
@@ -237,32 +243,38 @@ input[type="radio"].visually-hidden {
 	box-shadow: 0 3px 0 rgba(0,1,1,0.1) inset;
 }
 
-.slide:nth-child(1){
-    background-image:url("../img/nerds_index_slide1.png");
-    background-repeat:no-repeat;
-    background-position:99% -17px;
+.slide:nth-child(1) {
+	background-image:url("../img/nerds_index_slide1.png");
+	background-repeat:no-repeat;
+	background-position:99% -17px;
 }
-.slide:nth-child(2){
-    background-image:url("../img/nerds_index_slide2.png");
-    background-repeat:no-repeat;
-    background-position:99% 10px;
+
+.slide:nth-child(2) {
+	background-image:url("../img/nerds_index_slide2.png");
+	background-repeat:no-repeat;
+	background-position:99% 10px;
 }
-.slide:nth-child(3){
-    background-image:url("../img/nerds_index_slide3.png");
-    background-repeat:no-repeat;
-    background-position:99% 0;
+
+.slide:nth-child(3) {
+	background-image:url("../img/nerds_index_slide3.png");
+	background-repeat:no-repeat;
+	background-position:99% 0;
 }
-.slide{
-    display:none;
+
+.slide {
+	display:none;
 }
+
 #btn-1:checked ~ .slides .slide:nth-child(1) { 
-    display: block;
+	display: block;
 }
+
 #btn-2:checked ~ .slides .slide:nth-child(2) { 
-    display: block;
+	display: block;
 }
+
 #btn-3:checked ~ .slides .slide:nth-child(3) { 
-    display: block;
+	display: block;
 }
 
 .button {
@@ -277,6 +289,10 @@ input[type="radio"].visually-hidden {
 	border: none;
 	border-radius: 3px;
 	background-color: #fb565a;
+}
+
+.button button {
+	font-family: inherit;
 }
 
 .button:hover,
@@ -294,7 +310,6 @@ input[type="radio"].visually-hidden {
 	display: flex;
 	flex-wrap: wrap;
 }
-
 
 .grey {
 	background-color: #eeeeee;
@@ -325,7 +340,6 @@ input[type="radio"].visually-hidden {
 	width: 1160px;
 	padding-bottom: 80px;
 	border-bottom: 2px solid #eeeeee;
-
 }
 
 .services-list {
@@ -380,14 +394,14 @@ input[type="radio"].visually-hidden {
 .present .button,
 .site .button {
 	display: block;
-    width: 160px;
-    padding:15px 0;
-    font-size:16px;
-    color:white;
-    text-transform:uppercase;
-    text-align:center;
-    text-decoration:none;
-    border-radius:3px;
+	width: 160px;
+	padding:15px 0;
+	font-size:16px;
+	color:white;
+	text-transform:uppercase;
+	text-align:center;
+	text-decoration:none;
+	border-radius:3px;
 }
 
 .application .button {
@@ -455,18 +469,18 @@ input[type="radio"].visually-hidden {
 }
 
 .rules-work li::before {
-  content: "";
+	content: "";
 
-  position: absolute;
-  top: 10px;
-  left: 0;
-  
-  width: 25px;
-  height: 2px;
-  
-  background-image: url("../img/bullit.png");
-  background-repeat: no-repeat;
-  background-position: 0 0;
+	position: absolute;
+	top: 10px;
+	left: 0;
+
+	width: 25px;
+	height: 2px;
+
+	background-image: url("../img/bullit.png");
+	background-repeat: no-repeat;
+	background-position: 0 0;
 }
 
 .rules p {
@@ -513,10 +527,10 @@ input[type="radio"].visually-hidden {
 }
 
 .statistic sup {
-    font-size: 63%;
-    line-height: 0;
-    position: relative;
-    vertical-align: baseline;
+	font-size: 63%;
+	line-height: 0;
+	position: relative;
+	vertical-align: baseline;
 }
 
 .partners {
@@ -633,7 +647,7 @@ input[type="radio"].visually-hidden {
 }
 
 .price-controls input {
-	font-family: 'Roboto', 'Arial', sans-serif;
+	font-family: "Roboto", "Arial", sans-serif;
 	font-size: 16px;
 	width: 60px;
 	margin-left: 10px;
@@ -643,6 +657,14 @@ input[type="radio"].visually-hidden {
 	border: none;
 	border-radius: 5px;
 	background: #f1f1f1;
+}
+
+.filter input {
+	font-family: inherit;
+}
+
+.filter button {
+	font-family: inherit;
 }
 
 .filter fieldset {
@@ -707,11 +729,11 @@ input[type="radio"].visually-hidden {
 .filter-option input[type="radio"] + label::before {
 	content: "";
 	position: absolute;
-    display: block;
+	display: block;
 	padding: 0;
-    margin:0;
-    vertical-align:top;
-    cursor:pointer;
+	margin:0;
+	vertical-align:top;
+	cursor:pointer;
 	background-image: url("../img/radio_off.svg");
 	width: 25px;
 	height: 25px;
@@ -723,11 +745,11 @@ input[type="radio"].visually-hidden {
 .filter-option input[type="radio"]:checked + label::before {
 	content: "";
 	position: absolute;
-    display: block;
+	display: block;
 	padding: 0;
-    margin:0;
-    vertical-align:top;
-    cursor:pointer;
+	margin:0;
+	vertical-align:top;
+	cursor:pointer;
 	background-image: url("../img/radio_on.svg");
 	width: 25px;
 	height: 25px;
@@ -739,11 +761,11 @@ input[type="radio"].visually-hidden {
 .filter-option input[type="checkbox"] + label::before {
 	content: "";
 	position: absolute;
-    display: block;
+	display: block;
 	padding: 0;
-    margin:0;
-    vertical-align:top;
-    cursor:pointer;
+	margin:0;
+	vertical-align:top;
+	cursor:pointer;
 	background-image: url("../img/checkbox-off.svg");
 	width: 27px;
 	height: 23px;
@@ -755,11 +777,11 @@ input[type="radio"].visually-hidden {
 .filter-option input[type="checkbox"]:checked + label::before {
 	content: "";
 	position: absolute;
-    display: block;
+	display: block;
 	padding: 0;
-    margin:0;
-    vertical-align:top;
-    cursor:pointer;
+	margin:0;
+	vertical-align:top;
+	cursor:pointer;
 	background-image: url("../img/checkbox-on.svg");
 	width: 27px;
 	height: 23px;
@@ -774,7 +796,6 @@ input[type="radio"].visually-hidden {
 .filter-option input[type="checkbox"]:checked + label:hover::before {
 opacity: 1;
 }
-
 
 .filter button {
 	outline: none;
@@ -818,6 +839,7 @@ opacity: 1;
 }
 
 .sorting button {
+	font-family: inherit;
 	border: none;
 	background-color: transparent;
 	margin-top: 5px;
@@ -827,7 +849,7 @@ opacity: 1;
 	background-image: url("../img/icon_down_dir.svg");
 	background-position: 0 0;
 	background-repeat: no-repeat;
-	margin-left: 17px;
+	margin-left: 18px;
 }
 
 .sorting-up {
@@ -835,9 +857,8 @@ opacity: 1;
 	background-position: 0 0;
 	background-repeat: no-repeat;
 	opacity: 0.3;
-	margin-left: 17px;
+	margin-left: 18px;
 }
-
 
 .sorting b {
 	font-size: 18px;
@@ -855,7 +876,7 @@ opacity: 1;
 	font-weight: 400;
 	color: rgba(0,0,0,0.3);
 	text-transform: uppercase;
-	margin-right: 28px;
+	margin-right: 25px;
 }
 
 .sorting a.sorting-current,
@@ -936,6 +957,7 @@ opacity: 1;
 
 .catalog-item:hover .catalog-buy-item {
 	display: block;
+	opacity: 1;
 }
 
 .catalog-item:hover span {
@@ -967,12 +989,11 @@ opacity: 1;
 	color: #000000;
 }
 
-
 .catalog-buy-item .button-price {
 	display: inline-block;
-    width: 200px;
+	width: 200px;
 	height: 32px;
-    font-size:16px;
+	font-size:16px;
 	line-height: 18px;
 	font-weight: 500;
 	text-align: center;
@@ -982,10 +1003,9 @@ opacity: 1;
 	background-color: #fb565a;
 	border-radius: 3px;
 	color: #fff;
-	margin-top: 35px;
+	margin-top: 29px;
 	padding-top: 20px;
 }
-
 
 .pagination-list {
 	list-style: none;
@@ -1024,7 +1044,6 @@ opacity: 1;
 	text-transform: uppercase;
 }
 
-
 .pagination-list a:hover[href],
 .pagination-list a:focus[href] {
 	background-color: #dfdfdf;
@@ -1034,7 +1053,6 @@ opacity: 1;
 	background-color: #d5d5d5;
 	box-shadow: 0 3px 0 rgba(0,1,1,0.1) inset;
 }
-
 
 .pagination-item-current a {
 	background-color: #fff;
@@ -1058,7 +1076,6 @@ opacity: 1;
 	text-align: left;
 	width: 260px;
 }
-
 
 .footer-social ul {
 	display: flex;
@@ -1153,19 +1170,19 @@ opacity: 1;
 }
 
 .button-contacts{
-    display:block;
-    width:220px;
-    padding:14px 0;
+	display:block;
+	width:220px;
+	padding:14px 0;
 
 	margin-left: 50px;
 	margin-top: 22.2px;
-    font-size:16px;
-    color:white;
-    text-transform:uppercase;
-    text-align:center;
-    text-decoration:none;
-    background:#fb565a;
-    border-radius:3px;
+	font-size:16px;
+	color:white;
+	text-transform:uppercase;
+	text-align:center;
+	text-decoration:none;
+	background:#fb565a;
+	border-radius:3px;
 }
 
 .button-contacts:hover,
@@ -1208,6 +1225,14 @@ opacity: 1;
 	text-decoration: none;
 }
 
+.modal-close button {
+	font-family: inherit;
+}
+
+.modal input {
+	font-family: inherit;
+}
+
 .modal {
 	display: none;
 	color: #000000;
@@ -1224,6 +1249,11 @@ opacity: 1;
 .write-us-form input,
 .write-us-form textarea {
 	outline: none;
+}
+
+.write-us-form input,
+.write-us-form button {
+	font-family: inherit;
 }
 
 .write-us-item label {
