--- a/css/style.css
+++ b/css/style.css
@@ -353,6 +353,7 @@ input[type="radio"].visually-hidden {
 	justify-content: flex-start;
 	margin: 0;
 	padding: 0;
+	
 
 	list-style: none;
 }
@@ -387,6 +388,8 @@ input[type="radio"].visually-hidden {
 	background-image: url("../img/illustration1.jpg");
 	background-position: top center;
 	background-repeat: no-repeat;
+	background-color: red;
+
 }
 
 .application {
