--- a/css/style.css
+++ b/css/style.css
@@ -148,7 +148,7 @@ input[type="radio"].visually-hidden {
 .slider {
 	position:relative;
 	width:1160px;
-	height:415px;
+	min-height:415px;
 	margin:0 auto;
 	margin-bottom: 80px;
 }
@@ -196,11 +196,10 @@ input[type="radio"].visually-hidden {
 }
 
 .slide {
-	position:absolute;
+	min-height: 415px;
 	top:0;
 	left:0;
 	width:100%;
-	height:100%;
 	overflow:hidden;
 }
 
@@ -221,7 +220,7 @@ input[type="radio"].visually-hidden {
 .slide .btn {
 	display:block;
 	width:240px;
-	padding:17px 0;
+	padding:16px 0;
 	margin-top:40px;
 	font-family: inherit;
 	font-size: 16px;
@@ -370,7 +369,7 @@ input[type="radio"].visually-hidden {
 .services-item h3 {
 	margin: 0;
 	padding-top: 170px;
-	padding-bottom: 15px;
+	padding-bottom: 16px;
 	font-size: 24px;
 	line-height: 30px;
 	font-weight: bold;
@@ -381,18 +380,19 @@ input[type="radio"].visually-hidden {
 .services-item p {
 	margin: 0;
 	padding: 0;
-	padding-bottom: 35px;
+	padding-bottom: 34px;
+	width: 260px;
 }
 
 .site {
-	background-image: url("../img/illustration1.jpg");
+	background: url("../img/illustration1.jpg"), linear-gradient(#ff595d 146px, transparent 146px);
 	background-position: top center;
 	background-repeat: no-repeat;
 
 }
 
 .application {
-	background-image: url("../img/illustration2.jpg");
+	background: url("../img/illustration2.jpg"), linear-gradient(#00ca74 146px, transparent 146px);
 	background-position: top center;
 	background-repeat: no-repeat;
 }
@@ -402,7 +402,7 @@ input[type="radio"].visually-hidden {
 .site .button {
 	display: block;
 	width: 160px;
-	padding:15px 0;
+	padding:15.5px 0;
 	font-size:16px;
 	color:white;
 	text-transform:uppercase;
@@ -426,7 +426,7 @@ input[type="radio"].visually-hidden {
 }
 
 .present {
-	background-image: url("../img/illustration3.jpg");
+	background: url("../img/illustration3.jpg"), linear-gradient(#efc849 146px, transparent 146px);
 	background-position: top center;
 	background-repeat: no-repeat;
 }
@@ -448,7 +448,7 @@ input[type="radio"].visually-hidden {
 .rules {
 	width: 660px;
 	padding: 0;
-	margin-bottom: 53px;
+	margin-bottom: 50px;
 }
 
 .rules b {
@@ -512,12 +512,17 @@ input[type="radio"].visually-hidden {
 	text-align: center;
 }
 
+.statistic-information {
+	border: none;
+	border-collapse: collapse;
+}
+
 .statistic-information td {
 	font-size: 45px;
 	font-weight: bold;
 	color: #000000;
 	padding-top: 30px;
-	padding-right: 17px;
+	padding-right: 18px;
 	margin: 0;
 }
 
@@ -529,8 +534,8 @@ input[type="radio"].visually-hidden {
 	text-align: left;
 	margin: 0;
 	padding: 0;
-	padding-top: 28px;
-	padding-left: 2px;
+	padding-top: 30px;
+	padding-left: 1px;
 	
 }
 
@@ -575,7 +580,7 @@ input[type="radio"].visually-hidden {
 	width: 2px;
 	height: 52px;
 	background-color: #efefef;
-	right: 0px;
+	right: -21px;
 	top: 64px;
 }
 
@@ -1243,7 +1248,7 @@ opacity: 1;
 	font-size: 16px;
 	line-height: 22px;
 	color: #444444;
-	margin-top:10px;
+	margin-top:9px;
 }
 
 .modal-close button {
