--- a/css/style.css
+++ b/css/style.css
@@ -985,7 +985,7 @@ opacity: 1;
 .catalog-buy-item {
 	display: none;
 	position: absolute;
-	height: 231px;
+	min-height: 231px;
 	background-color: #eeeeee;
 	text-align: center;
 	bottom: 6px;
@@ -1018,7 +1018,7 @@ opacity: 1;
 	font-size: 16px;
 	line-height: 18px;
 	font-weight: 400;
-	margin: 0;
+	margin: 0 auto;
 	padding: 0;
 	margin-top: 13px;
 }
