--- a/css/style.css
+++ b/css/style.css
@@ -155,10 +155,10 @@ input[type="radio"].visually-hidden {
 }
 
 .slider {
-	position:relative;
-	width:1160px;
-	min-height:415px;
-	margin:0 auto;
+	position: relative;
+	width: 1160px;
+	min-height: 415px;
+	margin: 0 auto;
 	margin-bottom: 80px;
 }
 
@@ -167,26 +167,26 @@ input[type="radio"].visually-hidden {
 }
 
 .slider input[type=radio] {
-	position:absolute;
-	opacity:0;
+	position: absolute;
+	opacity: 0;
 }
 .slider-controls {
-	position:absolute;
-	bottom:105px;
-	left:50%;
-	width:200px;
-	height:10px;
-	margin-left:-100px;
-	text-align:center;
-	z-index:1000;
+	position: absolute;
+	bottom: 105px;
+	left: 50%;
+	width: 200px;
+	height: 10px;
+	margin-left: -100px;
+	text-align: center;
+	z-index: 1000;
 }
 
 .slider-controls label {
-	display:inline-block;
-	margin:0 6.5px;
-	vertical-align:top;
-	border-radius:50%;
-	cursor:pointer;
+	display: inline-block;
+	margin: 0 6.5px;
+	vertical-align: top;
+	border-radius: 50%;
+	cursor: pointer;
 	background-image: url("../img/radio_out_slider.png");
 	width: 18px;
 	height: 18px;
@@ -1294,9 +1294,7 @@ opacity: 1;
 	color: #000000;
 
 	background-color: #ffffff;
-	/*box-shadow: 0 20px 0 40px #ffffff;*/
-	
-	outline: 1px solid grey;
+	box-shadow: 0 30px 50px rgba(0, 0, 0, 0.7);
 }
 
 .modal-write-us {
@@ -1305,40 +1303,120 @@ opacity: 1;
 	
 	width: 780px;
 	padding: 70px 80px 84px 100px;
+	
+	display: none;
 }
 
 .modal h2 {
+	font-family: inherit;
 	font-size: 45px;
 	line-height: 45px;
 	font-weight: 500;
+	margin: 0;
+	padding: 0;
 }
 
-.modal-close button {
-	font-family: inherit;
-}
-
-.modal input {
-	font-family: inherit;
-}
-
-.write-us-form input,
-.write-us-form textarea {
+.modal-close {
+	position: absolute;
+	top: 78px;
+	right: 75px; 
+	
+	width: 21px;
+	height: 21px;
+	
+	font-size: 0;
+	
+	background-image: url("../img/close_cross.svg");
+	background-position: 0 0;
+	background-repeat: no-repeat;
+	background-color: #fff;
+	opacity: 0.3;
+	border: 0;
+	
+	cursor: pointer;
+	
 	outline: none;
 }
 
+.modal-close:hover,
+.modal-close:focus {
+	opacity: 1;
+}
+
+.modal-close:active {
+	opacity: 0.1;
+}
+
+.write-us-form {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
+}
+
+.write-us-item {
+	width: 360px;
+	margin: 0;
+	margin-bottom: 35px;
+}
+
+.write-us-item-text {
+	width: 760px;
+	margin: 0;
+	margin-bottom: 35px;
+}
+
+.write-us-item label,
+.write-us-item-text label {
+	display: block;
+	font-size: 16px;
+	line-height: 18px;
+	font-weight: bold;
+	margin-bottom: 10px;
+}
+
+.write-us-form input {
+	box-sizing: border-box;
+	width: 360px;
+	padding: 15px 18px;
+	margin: 0;
+}
+
+.write-us-form textarea {
+	box-sizing: border-box;
+	width: 760px;
+	padding: 15px 18px;
+	margin: 0;
+}
+
+.write-us-form .button {
+	display: block;
+	width: 260px;
+	font-family: inherit;
+	padding: 17px 0;
+	outline: none;
+	background:#fb565a;
+	cursor: pointer;
+}
+
+.write-us-form .button:hover,
+.write-us-form .button:focus {
+	background-color: #e74246;
+}
+
+.write-us-form .button:active {
+	background-color: #d7373b;
+	color: rgba(255,255,255,0.3);
+	box-shadow: 0 3px 0 rgba(0,1,1,0.1) inset;
+}
+
 .write-us-form input,
+.write-us-item-text textarea,
 .write-us-form button {
 	font-family: inherit;
 }
 
-.write-us-item label {
-	font-size: 16px;
-	line-height: 18px;
-	font-weight: bold;
-}
-
 .write-us-item input,
-.write-us-item textarea {
+.write-us-item-text textarea {
 	font-size: 16px;
 	line-height: 18px;
 	font-weight: 400;
@@ -1346,14 +1424,15 @@ opacity: 1;
 	background-color: transparent;
 	border: 2px solid #d7dcde;
 	border-radius: 3px;
+	outline: none;
 }
 
 .write-us-item input:hover,
-.write-us-item textarea:hover {
+.write-us-item-text textarea:hover {
 	border-color: #b4b9bb;
 }
 
 .write-us-item input:focus,
-.write-us-item textarea:focus {
+.write-us-item-text textarea:focus {
 	border-color: #444444;
 }
