--- a/css/style.css
+++ b/css/style.css
@@ -1297,6 +1297,10 @@ opacity: 1;
 	box-shadow: 0 30px 50px rgba(0, 0, 0, 0.7);
 }
 
+.modal-show {
+	display: block;
+}
+
 .modal-write-us {
 	bottom: 180px;
 	left: 240px;
