--- a/css/style.css
+++ b/css/style.css
@@ -1295,6 +1295,8 @@ opacity: 1;
 
 	background-color: #ffffff;
 	box-shadow: 0 30px 50px rgba(0, 0, 0, 0.7);
+	
+	z-index: 2000;
 }
 
 .modal-show {
@@ -1303,7 +1305,8 @@ opacity: 1;
 
 .modal-write-us {
 	bottom: 180px;
-	left: 240px;
+	left: 50%;
+	margin-left: -380px;
 	
 	width: 760px;
 	padding: 70px 80px 84px 100px;
