--- a/css/style.css
+++ b/css/style.css
@@ -1299,16 +1299,12 @@ opacity: 1;
 	z-index: 2000;
 }
 
-.modal-show {
-	display: block;
-}
-
 .modal-write-us {
 	bottom: 180px;
 	left: 50%;
 	margin-left: -480px;
 	width: 760px;
-	padding: 75px 100px 85px 100px;
+	padding: 68px 100px 83px 100px;
 	
 	display: none;
 }
@@ -1320,12 +1316,13 @@ opacity: 1;
 	font-weight: 500;
 	margin: 0;
 	padding: 0;
+	margin-bottom: 41px;
 }
 
 .modal-close {
 	position: absolute;
 	top: 78px;
-	right: 75px; 
+	right: 90px; 
 	
 	width: 21px;
 	height: 21px;
@@ -1377,20 +1374,20 @@ opacity: 1;
 	font-size: 16px;
 	line-height: 18px;
 	font-weight: bold;
-	margin-bottom: 10px;
+	margin-bottom: 8px;
 }
 
 .write-us-form input {
 	box-sizing: border-box;
 	width: 360px;
-	padding: 15px 18px;
+	padding: 14px 14px;
 	margin: 0;
 }
 
 .write-us-form textarea {
 	box-sizing: border-box;
 	width: 760px;
-	padding: 15px 18px;
+	padding: 11px 14px 12px;
 	margin: 0;
 }
 
@@ -1398,10 +1395,11 @@ opacity: 1;
 	display: block;
 	width: 260px;
 	font-family: inherit;
-	padding: 17px 0;
+	padding: 16px 0;
 	outline: none;
 	background:#fb565a;
 	cursor: pointer;
+	margin-top: 8px;
 }
 
 .write-us-form .button:hover,
@@ -1441,4 +1439,8 @@ opacity: 1;
 .write-us-item input:focus,
 .write-us-item-text textarea:focus {
 	border-color: #444444;
+}
+
+.modal-show {
+	display: block;
 }
