--- a/css/style.css
+++ b/css/style.css
@@ -1215,7 +1215,7 @@ input[type="radio"].visually-hidden {
 	width: 320px;
 	min-height: 310px;
 	left: 20px;
-	bottom: 53px;
+	top: -360px;
 
 	background-color: #fff;
 }
@@ -1299,6 +1299,46 @@ input[type="radio"].visually-hidden {
 	line-height: 22px;
 	color: #444444;
 	margin-top:9px;
+}
+
+@keyframes bounce {
+  0% {
+    transform: translateY(-2000px);
+   }
+
+  70% {
+    transform: translateY(30px);
+   }
+
+  90% {
+    transform: translateY(-10px);
+  }
+
+  100% {
+    transform: translateY(0);
+  }
+}
+
+@keyframes shake {
+  0%,
+  100% {
+    transform: translateX(0);
+  }
+
+  10%,
+  30%,
+  50%,
+  70%,
+  90% {
+    transform: translateX(-10px);
+  }
+
+  20%,
+  40%,
+  60%,
+  80% {
+    transform: translateX(10px);
+  }
 }
 
 .modal {
@@ -1484,4 +1524,10 @@ input[type="radio"].visually-hidden {
 
 .modal-show {
 	display: block;
+
+  animation: bounce 0.6s;
+}
+
+.modal-error {
+  animation: shake 0.6s;
 }
